--- a/kellerkompanie-sync/kellerkompanie-sync.csproj
+++ b/kellerkompanie-sync/kellerkompanie-sync.csproj
@@ -43,6 +43,7 @@
     <None Remove="Images\pause.png" />
     <None Remove="Images\play.png" />
     <None Remove="Images\questionmark.png" />
+    <None Remove="Images\refresh.png" />
     <None Remove="Images\server.png" />
     <None Remove="Images\settings.png" />
     <None Remove="Images\tfar.png" />
@@ -73,6 +74,7 @@
     <Resource Include="Images\pause.png" />
     <Resource Include="Images\play.png" />
     <Resource Include="Images\questionmark.png" />
+    <Resource Include="Images\refresh.png" />
     <Resource Include="Images\server.png" />
     <Resource Include="Images\settings.png" />
     <Resource Include="Images\tfar.png" />
