added publish option

--- a/kellerkompanie-sync/kellerkompanie-sync.csproj
+++ b/kellerkompanie-sync/kellerkompanie-sync.csproj
@@ -25,6 +25,11 @@
     <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Images\announcement.png" />
     <None Remove="Images\appicon.png" />
