--- a/kellerkompanie-sync/kellerkompanie-sync.csproj
+++ b/kellerkompanie-sync/kellerkompanie-sync.csproj
@@ -13,16 +13,18 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>0.2.2-beta</Version>
+    <Version>0.3.0-beta</Version>
     <Authors>Schwaggot</Authors>
     <Company>Kellerkompanie</Company>
     <Copyright />
     <PackageProjectUrl>https://www.kellerkompanie.com</PackageProjectUrl>
     <NeutralLanguage>en</NeutralLanguage>
+    <AssemblyVersion>0.3.0.0</AssemblyVersion>
+    <FileVersion>0.3.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
